# microbot

./: .env.dev.example  .env.example  .env.prod.example  .flake8  .gitignore  CHANGELOG.md  DAO-en.md  DAO.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  ROADMAP.md  cron_examples.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_models.py  frontend_miniapp_prompt.md  frontend_miniapp_prompt_update.md  frontend_miniapp_prompt_v2.md  gunicorn_conf.py  main.py  microbot.db  microbot.db.backup  mypy.ini  package-lock.json  pyproject.toml  requirements.prod.txt  requirements.txt  telegram_bot.db  test_startup.py  test_user_create.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 485079b6afc7_initial_migration.py  5f4f77589362_add_auto_start_fields_to_user_model.py  72097c8f6058_rename_metadata_column_to_template_.py  8e7b2d37b3a9_add_telegramsession_model_and_update_.py  ecd967a0f0f5_add_session_string_to_user_model.py  f55b9aad7cdc_add_telegram_login_fields.py
app/: .env  config.py  database.py  dependencies.py  discover_groups.py  fix_websocket.py  main.py  main.py.bak  models.py  schemas.py
app/api/: __init__.py
app/core/: auth.py  cluster.py  config.py  consistency.py  logging.py  monitoring.py  security.py  telegram.py  websocket.py
app/crud/: auto_reply_rule.py  group.py  message_log.py  message_template.py  target_user.py  user.py
app/db/: database.py
app/docs/: admin_config.md
app/middleware/: cors.py  rate_limiter.py
app/models/: api_key.py  (+26 more)
docs/: API_CHANGELOG.md  DEPLOYMENT.md  MONITORING.md  MONITORING_SETUP.md  QUICK_START.md  README.md  ROLLBACK.md  RUNBOOK.md  api_reference.md  install.md
nginx/: nginx.conf
scripts/: backup.sh  create_admin.py  restore_backup.sh  setup_dev.sh
tests/: test_api.py  test_telegram_auth.py  test_websocket.py
(+83 files in other folders)
